# mmxxvi_straight_library

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yaml  prepare_library.py  upload_library.py
api/: Dockerfile  config.py  database.py  main.py  pagination.py  pyproject.toml  store.py
api/models/: __init__.py  schemas.py
api/routers/: __init__.py  library.py  semantic.py  upload.py
frontend/: app.js  index.html  styles.css
init/: init.sql
mcp/: Dockerfile  pyproject.toml  server.py
tests/: conftest.py  pyproject.toml  test_api.py  test_fixture.md  test_mcp.py
