[project]
name = "straight-library-api"
version = "1.0.0"
description = "Straight Library API - read-only library browser"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.2",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0.1",
]
